--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-    "name": "niconico-comment3D",
-    "version": "1.0.0",
-    "description": "niconico-comment3Dviewer",
-    "scripts": {
-        "build": "babel src --out-dir lib",
-        "postbuild": "browserify lib/main.js -o lib/out.js",
-        "start": "node lib/index.js",
-        "prestart": "npm run build"
-    },
-    "author": "case2912",
-    "license": "ISC",
-    "devDependencies": {
-        "babel-cli": "^6.22.2",
-        "babel-preset-es2015": "^6.22.0",
-        "babel-preset-stage-3": "^6.22.0"
-    },
-    "dependencies": {
-        "cheerio": "^0.22.0",
-        "request": "^2.79.0"
-    }
+  "name": "niconico-comment3D",
+  "version": "1.0.0",
+  "description": "niconico-comment3Dviewer",
+  "scripts": {
+    "build": "babel src --out-dir lib",
+    "postbuild": "browserify lib/main.js -o lib/out.js",
+    "start": "node lib/index.js",
+    "prestart": "npm run build"
+  },
+  "author": "case2912",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-3": "^6.22.0"
+  },
+  "dependencies": {
+    "cheerio": "^0.22.0",
+    "grimoirejs": "^0.14.7",
+    "grimoirejs-fundamental": "^0.12.10",
+    "grimoirejs-math": "^1.12.1",
+    "grimoirejs-text": "^1.0.6",
+    "request": "^2.79.0"
+  }
 }
